--- a/src/partials/favor-cockt.html
+++ b/src/partials/favor-cockt.html
@@ -1,6 +1,6 @@
 <section class="favor-cockt">
   <div class="container">
-    <ul class="favor__list">
-    </ul>  
+    <h1 class="favor-coctails__title">Favorite cocktails</h1>
+    <ul class="favor__list"></ul>
   </div>
 </section>
