--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,10 +1,10 @@
 <section class="hero">
   <div class="hero-left">
-    <h1 class="hero-title text_dark">
+    <h1 class="hero-title change-theme">
       A party without <span class="hero-cocktails">cocktails</span><br />
       is not like a party
     </h1>
-    <p class="hero-about text_dark">
+    <p class="hero-about change-theme">
       From classic sips to exotic mixes, we're your key to becoming a cocktail
       wizard!
     </p>
