--- a/src/partials/search.html
+++ b/src/partials/search.html
@@ -5,7 +5,7 @@
       <form class="search-form">
         <input
           id="search"
-          class="search-input"
+          class="search-input change-theme"
           placeholder="Search"
           name="search"
           type="text"
