--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -16,6 +16,9 @@
   font-style: normal;
   font-weight: 400;
 }
+.hero-title.dark-mode {
+  color: var(--white);
+}
 .hero-cocktails {
   color: var(--color-accent);
   font-style: italic;
@@ -29,6 +32,9 @@
   font-family: Poppins;
   font-style: normal;
   font-weight: 400;
+}
+.hero-about.dark-mode {
+  color: var(--white);
 }
 
 .hero-button {
@@ -57,7 +63,7 @@
   .hero {
     flex-direction: column;
     gap: 20px;
-    margin-top: 120px;
+    padding-top: 68px;
   }
   .hero-left {
     margin-left: auto;
@@ -147,7 +153,7 @@
   .hero-left {
     width: 371px;
     max-height: 332px;
-    margin-top: 265px;
+    padding-top: 265px;
   }
   .hero-title {
     width: 384px;
@@ -227,7 +233,7 @@
   .hero-left {
     width: 555px;
     max-height: 414px;
-    margin-top: 258px;
+    padding-top: 258px;
   }
 
   .hero-title {
