--- a/src/partials/modal-cocktail.html
+++ b/src/partials/modal-cocktail.html
@@ -1,4 +1,8 @@
-<section class="modal-cocktails is-hidden" data-modal id="modal-cocktails">
+<section
+  class="modal-cocktails change-theme is-hidden"
+  data-modal
+  id="modal-cocktails"
+>
   <div class="wrapper-modal-cocktails">
     <button class="close-modal-cocktails" data-modal-close>
       <svg class="svg-close-modal-cocktails" width="22" height="22">
