--- a/src/partials/modal-ingredients.html
+++ b/src/partials/modal-ingredients.html
@@ -1,5 +1,7 @@
-<div class="modal-cocktails is-hidden modal-ingredients" data-modal modal-ingredients>
-    <div class="modal-ingredient-details ">
-
-    </div>
+<div
+  class="is-hidden modal-ingredients change-theme"
+  data-modal
+  modal-ingredients
+>
+  <div class="modal-ingredient-details"></div>
 </div>
