--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,9 +1,9 @@
 <footer class="footer">
   <div class="container container-footer">
     <div class="footer-logo-container">
-      <a class="footer-link" href="/index.html">
+      <a class="footer-link" href="index.html">
         <span class="footer-logo">Drinkify</span>
-        <svg class="footer-icon" >
+        <svg class="footer-icon">
           <use href="/img/sprite.svg#icon-cocktail"></use>
         </svg>
       </a>
