--- a/src/partials/modal-cocktail.html
+++ b/src/partials/modal-cocktail.html
@@ -4,7 +4,7 @@
   id="modal-cocktails"
 >
   <div class="wrapper-modal-cocktails">
-    <button class="close-modal-cocktails" data-modal-close>
+    <button class="close-modal-cocktails cocktails-close" data-modal-close>
       <svg class="svg-close-modal-cocktails" width="22" height="22">
         <use href="/img/sprite.svg#icon-close"></use>
       </svg>
