fix hero dark-theme icon

--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,6 +1,9 @@
 .hero-right-background1_dark {
   visibility: hidden;
 }
+.hero-right.dark-mode .hero-right-background1_dark {
+  visibility: visible;
+}
 
 .hero {
   margin: 0 auto;
