--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -11,7 +11,7 @@
     <a class="hero-button" href="#cocktails">view cocktails</a>
     <!-- <button type="button"></button> -->
   </div>
-  <div class="hero-right">
+  <div class="hero-right change-theme">
     <div class="background">
       <picture>
         <source
