--- a/src/css/header.css
+++ b/src/css/header.css
@@ -97,7 +97,8 @@
   }
 
   .submenu {
-    display: none;
+    visibility: hidden;
+    opacity: 0;
     position: absolute;
     min-width: 192px;
     left: 20px;
@@ -117,11 +118,16 @@
     font-weight: 400;
     line-height: 18px;
     letter-spacing: 0.28px;
-    transition: background-color 0.9s;
+    transition: all var(--t-dur) var(--t-tf);
+  }
+  .favorite:hover .submenu {
+    visibility: visible;
+    opacity: 1;
   }
 
   .submenu li {
     margin: 5px 0;
+    transition: all var(--t-dur) var(--t-tf);
   }
   .submenu li:hover {
     color: #fdfdff;
