--- a/src/css/styles-favorite-cocktails.css
+++ b/src/css/styles-favorite-cocktails.css
@@ -8,4 +8,5 @@
 @import url('./favor-cockt.css');
 @import url('./footer.css');
 @import url('./basic-modal-style.css');
+@import url('./cocktails.css');
 @import url('./mobile-menu.css');
