--- a/src/css/favor-cockt.css
+++ b/src/css/favor-cockt.css
@@ -64,3 +64,12 @@
     column-gap: 24px;
   }
 }
+.svg-heart,
+.svg-icon {
+  pointer-events: none;
+  width: 48px;
+  height: 48px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
