--- a/src/css/styles-favorite-cocktails.css
+++ b/src/css/styles-favorite-cocktails.css
@@ -9,4 +9,6 @@
 @import url('./footer.css');
 @import url('./basic-modal-style.css');
 @import url('./cocktails.css');
+@import url('./modal-cocktails.css');
 @import url('./mobile-menu.css');
+@import url('./element-not-found.css');
