fix favor cockt ingred event listener

--- a/src/css/styles-favorite-cocktails.css
+++ b/src/css/styles-favorite-cocktails.css
@@ -10,5 +10,6 @@
 @import url('./basic-modal-style.css');
 @import url('./cocktails.css');
 @import url('./modal-cocktails.css');
+@import url('./modal-ingredients.css');
 @import url('./mobile-menu.css');
 @import url('./element-not-found.css');
