--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -34,7 +34,8 @@
         class="btn-change-theme"
         id="js-btn-change-theme"
         type="button" 
-      > <div class="circle-change-theme change-theme"></div></button>
+      ><div class="circle-change-theme change-theme"></div>
+      </button>
     </div>
 
     <button class="menu-button" data-modal-open>
