--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -17,7 +17,9 @@
             class="btn-change-theme"
             id="js-btn-change-theme"
             type="button"
-          ><div class="circle-change-theme change-theme"></div></button>
+          >
+            <div class="circle-change-theme change-theme"></div>
+          </button>
         </div>
 
         <button data-modal-close class="head-menu-close" type="button">
@@ -35,7 +37,7 @@
 
       <div class="dropdown">
         <div class="dropbtn-div">
-          <a class="dropbtn dropdown-trigger" href="#"
+          <a class="dropbtn dropdown-trigger"
             >Favorite<svg class="icon-chevron-down" width="24" height="24">
               <use href="./img/sprite.svg#icon-chevron-down"></use></svg
           ></a>
