--- a/src/partials/modal-cocktail.html
+++ b/src/partials/modal-cocktail.html
@@ -10,7 +10,7 @@
       </svg>
     </button>
     <ul class="js-modal-cocktails list"></ul>
-    <div class="js-modal-cocktails"></div>
+    <div class="js-modal-cocktails js-modal-cocktails-div"></div>
     <div class="modal-cocktails-card-buttons">
       <ul class="modal-cocktails-buttons list">
         <li class="modal-cocktails-buttons-item">
