--- a/src/css/favor-cockt.css
+++ b/src/css/favor-cockt.css
@@ -1,6 +1,9 @@
 .favor-cockt {
   padding-top: 80px;
 }
+.favor-coctails__title {
+  font-size: 24px;
+}
 .trash__btn.svg__btn {
   display: flex;
   justify-content: center;
@@ -49,6 +52,9 @@ svg.svg-icon-trash {
   .favor__list {
     padding-top: 32px;
     padding-bottom: 100px;
+  }
+  .favor-coctails__title {
+    font-size: 40px;
   }
 }
 
