--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,7 +4,7 @@
       <ul class="desktop-menu">
         <li><a href="index.html">Home</a></li>
         <li class="favorite">
-          <a href="#"
+          <a
             >Favorite
             <svg class="chevron-down">
               <use href="img/sprite.svg#icon-chevron-down"></use>
@@ -30,11 +30,8 @@
     </div>
 
     <div class="menu-toggle">
-      <button
-        class="btn-change-theme"
-        id="js-btn-change-theme"
-        type="button" 
-      ><div class="circle-change-theme change-theme"></div>
+      <button class="btn-change-theme" id="js-btn-change-theme" type="button">
+        <div class="circle-change-theme change-theme"></div>
       </button>
     </div>
 
