--- a/src/css/modal-ingredients.css
+++ b/src/css/modal-ingredients.css
@@ -47,7 +47,7 @@
   /* margin-bottom: 22px; */
   /* line-height: 112.5%; */
   line-height: 128.571%;
-  font-style: 14px;
+  font-size: 14px;
   font-style: normal;
   font-weight: 600;
   text-transform: uppercase;
