--- a/src/css/favor-cockt.css
+++ b/src/css/favor-cockt.css
@@ -1,5 +1,9 @@
+body.small-body .favor-cockt {
+  padding-bottom: 600px;
+}
 .favor-cockt {
   padding-top: 80px;
+  padding-bottom: 600px;
 }
 .favor-coctails__title {
   font-size: 24px;
