--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -30,8 +30,8 @@
     </div>
 
     <div class="menu-toggle">
-      <button class="btn-change-theme" id="js-btn-change-theme" type="button">
-        <div class="circle-change-theme change-theme"></div>
+      <button class="btn-change-theme js-btn-change-theme" type="button">
+        <span class="circle-change-theme change-theme"></span>
       </button>
     </div>
 
