--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -14,11 +14,11 @@
       <div class="mobile-menu-buttons">
         <div class="menu-toggle">
           <button
-            class="btn-change-theme"
+            class="btn-change-theme js-btn-change-theme"
             id="js-btn-change-theme"
             type="button"
           >
-            <div class="circle-change-theme change-theme"></div>
+            <span class="circle-change-theme change-theme"></span>
           </button>
         </div>
 
