fix div data-atribute

--- a/src/partials/modal-ingredients.html
+++ b/src/partials/modal-ingredients.html
@@ -1,7 +1,3 @@
-<div
-  class="is-hidden modal-ingredients change-theme"
-  data-modal
-  modal-ingredients
->
+<div class="is-hidden modal-ingredients change-theme" data-modal>
   <div class="modal-ingredient-details"></div>
 </div>
