--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -90,7 +90,7 @@
         />
       </picture>
 
-      <p class="hero-right-about text_dark">
+      <p class="hero-right-about change-theme text_dark">
         search your favorite cocktail by abc
       </p>
     </div>
