--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -4,7 +4,9 @@
 .hero-right.dark-mode .hero-right-background1_dark {
   visibility: visible;
 }
-
+.hero-right-about.dark-mode {
+  color: var(--whites);
+}
 .hero {
   margin: 0 auto;
   width: 100%;
